--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Lunch Checker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <link rel="stylesheet" href="module1-solutions/styles/bootstrap.min.css">
     <style>
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
@@ -26,7 +26,7 @@
            {{lunchCtrl.message}}
          </div>
    </div>
-<script src="angular.min.js"></script>
-<script src="app.js"></script>
+<script src="module1-solutions/angular.min.js"></script>
+<script src="module1-solutions/app.js"></script>
 </body>
 </html>
